--- a/Backend/vercel.json
+++ b/Backend/vercel.json
@@ -1,12 +1,15 @@
 {
-"version": 2,
-"builds": [
-{"src": "*.js", "use": "@vercel/node" }
-],
-"routes": [
-{
-"src": "/(.*)",
-"dest": "/"
-}
-]
+  "version": 2,
+  "builds": [
+    {
+      "src": "Backend.js", // Replace with your server file
+      "use": "@vercel/node"
+    }
+  ],
+  "routes": [
+    {
+      "src": "/(.*)",
+      "dest": "Backend.js" // Replace with your server file
+    }
+  ]
 }
